--- a/views/layouts/main_layout.hbs
+++ b/views/layouts/main_layout.hbs
@@ -8,6 +8,46 @@
     <title>Testimony</title>
 </head>
 <body>
+    <nav class="p-5 bg-white shadow md:flex md:items-center md:justify-between">
+        <div class="flex justify-between items-center">
+            <span class="text-2xl font-sans">
+                TESTIMONY
+            </span>
+
+            <span class="text-3xl cursor-pointer block md:hidden">
+                <ion-icon name="menu" onclick="Menu(this)"></ion-icon>
+            </span>
+        </div>
+
+        <ul id="nav-menu" class="z-2 absolute bg-white w-full left-0 py-5 pl-7 opacity-0 md:py-0 top-[-400px] transition-all ease-in duration-500 md:pl-0 md:static md:z-auto md:flex md:items-center md:space-x-5 md:w-auto md:opacity-100">
+            <li class="my-2 md:my-0">
+                <a href="#" class="">HOME</a>
+            </li>
+            <li class="my-2 md:my-0">
+                <a href="#" class="">HOME</a>
+            </li>
+            <li class="my-2 md:my-0">
+                <a href="#" class="">HOME</a>
+            </li>
+
+            <a href="#" class="bg-blue-500 text-white rounded px-5 py-2 my-2 md:my-0">
+                Register
+            </a>
+        </ul>
+    </nav>
+
+
     {{{body}}}
+
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+    <script>
+        function Menu(e){
+            let list = document.getElementById('nav-menu')
+            e.name === 'menu' ? (e.name = 'close', list.classList.add('top-[80px]'), list.classList.add('opacity-100')) : (e.name = 'menu', list.classList.remove('top-[80px]'), list.classList.remove('opacity-100'))
+        }
+    </script>
 </body>
 </html>
