--- a/views/layouts/main_layout.hbs
+++ b/views/layouts/main_layout.hbs
@@ -8,10 +8,10 @@
     <title>Testimony</title>
 </head>
 <body>
-    <nav class="p-5 bg-violet-800 shadow">
+    <nav class="p-5 bg-white shadow">
         <div class="container mx-auto md:flex md:items-center md:justify-between">
             <div class="flex justify-between items-center">
-            <span class="text-2xl font-bold text-white">
+            <span class="text-2xl font-bold text-violet-800">
                 TESTIMONY
             </span>
 
@@ -20,12 +20,12 @@
             </span>
         </div>
 
-        <ul id="nav-menu" class="z-2 absolute bg-violet-800 w-full left-0 py-5 pl-7 opacity-0 md:py-0 top-[-400px] transition-all ease-in duration-500 md:pl-0 md:static md:z-auto md:flex md:items-center md:space-x-5 md:w-auto md:opacity-100">
-            <li class="my-2 text-white hover:text-violet-300 hover:underline md:my-0">
+        <ul id="nav-menu" class="z-2 absolute bg-white w-full left-0 py-5 pl-7 opacity-0 md:py-0 top-[-400px] transition-all ease-in duration-500 md:pl-0 md:static md:z-auto md:flex md:items-center md:space-x-5 md:w-auto md:opacity-100">
+            <li class="mb-3 hover:text-violet-600 hover:underline md:my-0">
                 <a href="#" class="">Login</a>
             </li>
 
-            <a href="#" class="bg-white text-violet-800 rounded px-5 py-2 my-2 hover:bg-violet-400 hover:text-white md:my-0">
+            <a href="#" class="bg-violet-800 text-white rounded px-5 py-2 my-2 hover:bg-violet-600 md:my-0">
                 Register
             </a>
         </ul>
