--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,6 @@
-<h1 class="text-8xl">page</h1>
+<section class="bg-gradient-to-r from-violet-900 to-violet-600 py-32">
+    <div class="container mx-auto flex flex-row">
+        <h1 class="text-4xl font-bold text-white">Share your testimony to encourage someone today!</h1>
+        <img src="https://www.clipartmax.com/png/middle/0-7218_megaphone-hd-png-transparent-megaphone-hd-megaphone-png.png" alt="Megaphone Hd Png Transparent Megaphone Hd - Megaphone Png@clipartmax.com">
+    </div>
+</section>
