--- a/views/layouts/main_layout.hbs
+++ b/views/layouts/main_layout.hbs
@@ -4,34 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./output.css">
+    <link rel="stylesheet" href="./css/output.css">
     <title>Testimony</title>
 </head>
 <body>
-    <nav class="p-5 bg-white shadow">
-        <div class="container mx-auto md:flex md:items-center md:justify-between">
-            <div class="flex justify-between items-center">
-            <span class="text-2xl font-bold text-violet-800">
-                TESTIMONY
-            </span>
-
-            <span class="text-3xl cursor-pointer block md:hidden">
-                <ion-icon name="menu" onclick="Menu(this)"></ion-icon>
-            </span>
-        </div>
-
-        <ul id="nav-menu" class="z-2 absolute bg-white w-full left-0 py-5 pl-7 opacity-0 md:py-0 top-[-400px] transition-all ease-in duration-500 md:pl-0 md:static md:z-auto md:flex md:items-center md:space-x-5 md:w-auto md:opacity-100">
-            <li class="mb-3 hover:text-violet-600 hover:underline md:my-0">
-                <a href="#" class="">Login</a>
-            </li>
-
-            <a href="#" class="bg-violet-800 text-white rounded px-5 py-2 my-2 hover:bg-violet-600 md:my-0">
-                Register
-            </a>
-        </ul>
-        </div>
-    </nav>
-
+    {{>_header}}
 
     {{{body}}}
 
