--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,11 @@
-<section class="bg-gradient-to-r from-violet-900 to-violet-600 py-32">
-    <div class="container mx-auto flex flex-row">
-        <h1 class="text-4xl font-bold text-white">Share your testimony to encourage someone today!</h1>
-        <img src="https://www.clipartmax.com/png/middle/0-7218_megaphone-hd-png-transparent-megaphone-hd-megaphone-png.png" alt="Megaphone Hd Png Transparent Megaphone Hd - Megaphone Png@clipartmax.com">
+<section class="bg-gradient-to-r from-violet-900 to-violet-600 py-10">
+    <div class="container mx-auto px-4 flex flex-col space-y-5 items-center justify-center md:px-auto md:flex-row md:space-y-0">
+        <div class="md:w-1/2">
+            <h1 class="text-4xl text-center font-bold text-white max-w-xl md:text-left">Share your testimony to encourage someone today!</h1>
+        </div>
+        <div class="md:w-1/2 flex flex-col justify-center items-center">
+            <img src="./images/share.png" class="w-3/5" alt="Share">
+            <p>lorem100</p>
+        </div>
     </div>
 </section>
