--- a/public/css/output.css
+++ b/public/css/output.css
@@ -563,6 +563,26 @@ video {
   top: -400px;
 }
 
+.top-\[-40px\] {
+  top: -40px;
+}
+
+.top-\[-60px\] {
+  top: -60px;
+}
+
+.top-\[-6px\] {
+  top: -6px;
+}
+
+.top-\[20px\] {
+  top: 20px;
+}
+
+.top-\[200px\] {
+  top: 200px;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
