--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,19 @@
+{{!-- Hero --}}
 <section class="bg-gradient-to-r from-violet-900 to-violet-600 py-10">
-    <div class="container mx-auto px-4 flex flex-col space-y-5 items-center justify-center md:px-auto md:flex-row md:space-y-0">
+    <div class="container mx-auto px-4 flex flex-col space-y-5 items-center justify-center md:px-auto md:flex-row md:space-y-0 md:space-x-5">
         <div class="md:w-1/2">
             <h1 class="text-4xl text-center font-bold text-white max-w-xl md:text-left">Share your testimony to encourage someone today!</h1>
         </div>
-        <div class="md:w-1/2 flex flex-col justify-center items-center">
+        <div class="flex flex-col space-y-5 justify-center items-center md:w-1/2">
             <img src="./images/share.png" class="w-3/5" alt="Share">
-            <p>lorem100</p>
+            <div>
+                <q class="font-mono text-white">
+                    And they overcame him by the blood of the Lamb, and by the word of their testimony.
+                </q>
+                <p class="text-white float-right mt-5 font-serif">Revelation 12:11</p>
+            </div>
         </div>
     </div>
 </section>
+
+{{!-- Why Share --}}
