--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
 <section class="bg-gradient-to-r from-violet-900 to-violet-600 py-10">
     <div class="container mx-auto px-4 flex flex-col space-y-5 items-center justify-center md:px-auto md:flex-row md:space-y-0 md:space-x-5">
         <div class="md:w-1/2">
-            <h1 class="text-4xl text-center font-bold text-white max-w-xl md:text-left">Share your testimony to encourage someone today!</h1>
+            <h1 class="text-4xl text-center font-bold text-white md:text-left">Share your testimony to encourage someone today!</h1>
         </div>
         <div class="flex flex-col space-y-5 justify-center items-center md:w-1/2">
             <img src="./images/share.png" class="w-3/5" alt="Share">
@@ -10,10 +10,21 @@
                 <q class="font-mono text-white">
                     And they overcame him by the blood of the Lamb, and by the word of their testimony.
                 </q>
-                <p class="text-white float-right mt-5 font-serif">Revelation 12:11</p>
+                <p class="text-white float-right mt-5 font-serif">Revelation 12:11 KJV</p>
             </div>
         </div>
     </div>
 </section>
 
 {{!-- Why Share --}}
+<section class="py-10 px-4 md:px-auto">
+    <div class="container mx-auto">
+        <h1 class="text-3xl font-bold text-violet-800">
+            Why Share?
+        </h1>
+
+        <p class="py-5">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis maiores ea, harum rem vero sunt nisi mollitia voluptatibus at provident expedita possimus voluptatem. Accusantium harum aliquid cupiditate nihil culpa aliquam! Delectus tempore, dignissimos voluptatem enim ullam, nisi in temporibus excepturi, voluptatum fugiat magnam! Inventore obcaecati quasi accusamus neque adipisci expedita molestias magni, temporibus reiciendis. Dolorem saepe vero illum repellat blanditiis veritatis dolorum reprehenderit at debitis ratione labore nam amet modi a eum aperiam earum ipsa magni tenetur nisi sapiente, laudantium molestiae ex. Sit ipsum recusandae voluptate necessitatibus. Consectetur, quae dicta. Fuga delectus alias ex sunt architecto voluptas minus expedita tenetur.
+        </p>
+    </div>
+</section>
