Added forms plugin, working on search bar

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -17,8 +17,8 @@
 </section>
 
 {{!-- Why Share --}}
-<section class="py-10 px-4 md:px-auto">
-    <div class="container mx-auto">
+<section class="py-10">
+    <div class="container mx-auto px-4 md:px-auto">
         <h1 class="text-3xl font-bold text-violet-800">
             Why Share?
         </h1>
@@ -26,5 +26,12 @@
         <p class="py-5">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis maiores ea, harum rem vero sunt nisi mollitia voluptatibus at provident expedita possimus voluptatem. Accusantium harum aliquid cupiditate nihil culpa aliquam! Delectus tempore, dignissimos voluptatem enim ullam, nisi in temporibus excepturi, voluptatum fugiat magnam! Inventore obcaecati quasi accusamus neque adipisci expedita molestias magni, temporibus reiciendis. Dolorem saepe vero illum repellat blanditiis veritatis dolorum reprehenderit at debitis ratione labore nam amet modi a eum aperiam earum ipsa magni tenetur nisi sapiente, laudantium molestiae ex. Sit ipsum recusandae voluptate necessitatibus. Consectetur, quae dicta. Fuga delectus alias ex sunt architecto voluptas minus expedita tenetur.
         </p>
+    </div>
+</section>
+
+{{!-- Search bar --}}
+<section class="py-10">
+    <div class="container mx-auto px-4 md:px-auto flex justify-center items-center">
+        
     </div>
 </section>
