--- a/views/index.hbs
+++ b/views/index.hbs
@@ -32,6 +32,19 @@
 {{!-- Search bar --}}
 <section class="py-10">
     <div class="container mx-auto px-4 md:px-auto flex justify-center items-center">
-        
+        <form class="flex items-center w-full md:w-3/5">   
+            <label for="simple-search" class="sr-only">Search</label>
+            <div class="relative w-full">
+                <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
+                    <ion-icon class="w-5 h-5 text-gray-500" name="search-outline"></ion-icon>
+                    
+                </div>
+                <input type="text" id="simple-search" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-full focus:border-violet-500 block w-full pl-10 p-2.5" placeholder="Search by keyword..." required>
+            </div>
+            <button type="submit" class="py-2 px-6 ml-2 text-sm font-medium text-white bg-violet-800 rounded-full">
+                <ion-icon class="w-5 h-5" name="search-outline"></ion-icon>
+                <span class="sr-only">Search</span>
+            </button>
+        </form>
     </div>
 </section>
