Added masonry styling to testimonies section

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -48,3 +48,56 @@
         </form>
     </div>
 </section>
+
+{{!-- Looping through testimonies --}}
+<section class="py-10">
+    <div class="container mx-auto px-4 md:px-auto">
+        <div class="grid">
+            {{!-- Columns --}}
+            <div class="grid-col grid-col--1">
+            
+            </div>
+            <div class="grid-col grid-col--2">
+            
+            </div>
+            <div class="grid-col grid-col--3">
+            
+            </div>
+            <div class="grid-col grid-col--4">
+            
+            </div>
+
+            {{!-- Content --}}
+            <div class="grid-item">
+                <div class="block bg white border borer-gray-200 shadow p-5 max-w-md">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, ipsum voluptatem. Ad vel recusandae praesentium. Eum obcaecati magni quaerat perferendis natus sequi similique dolores dolore, molestiae nesciunt voluptatibus quis velit quod distinctio assumenda quasi accusamus adipisci et repellat ipsum voluptatum at labore praesentium fugiat. Exercitationem, ea ut! Dolorum dolor neque, ducimus incidunt voluptatum et eos? Modi perferendis dignissimos reprehenderit officia quas aliquid vero porro recusandae pariatur incidunt consequatur laboriosam, molestias non optio necessitatibus, quis est, ex quia similique repellat at! Iure laborum corporis, sint, neque temporibus at reprehenderit incidunt aspernatur nam repudiandae consectetur ea qui saepe veritatis quaerat unde architecto, quas animi id labore. Earum libero tempore quibusdam enim, quasi laudantium et id tempora dicta nostrum? Similique aperiam et quo voluptate dolore totam, ab illum libero aliquid aliquam. Assumenda voluptates mollitia dolorem distinctio tenetur facilis eum architecto corporis quo, cupiditate pariatur rem odio deserunt perspiciatis esse sint excepturi accusantium tempore officiis. Recusandae ex, commodi odio libero tempora deleniti quae earum corrupti est officiis omnis consequatur facere consectetur mollitia porro ad quidem! Eaque aspernatur beatae enim iure molestiae quam quos nihil ipsum temporibus, commodi assumenda impedit cumque eveniet atque voluptatem doloribus? Ducimus impedit harum nostrum vero esse dolore doloribus consequatur ex?
+                </div>
+            </div>
+            <div class="grid-item">
+                <div class="block bg white border borer-gray-200 shadow p-5 max-w-md">
+                    Lorem ipsum dolor sit amet consectetur adipisicing e
+                </div>
+            </div>
+            <div class="grid-item">
+                <div class="block bg white border borer-gray-200 shadow p-5 max-w-md">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae eos facere reprehenderit animi expedita ex in nam tempore architecto necessitatibus!
+                </div>
+            </div>
+            <div class="grid-item">
+                <div class="block bg white border borer-gray-200 shadow p-5 max-w-md">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi quod, deserunt quia rem tenetur quam rerum mollitia ipsum asperiores sit dicta, necessitatibus voluptatum eius aspernatur sapiente, alias quo repellat praesentium ullam cupiditate amet incidunt adipisci optio omnis! Sed, omnis veritatis numquam temporibus repudiandae placeat inventore velit quod dignissimos nisi saepe doloremque vitae, culpa repellat laboriosam fugit consequatur, tempore quibusdam delectus! Tempore omnis eos nisi vel, facilis dignissimos aspernatur numquam repudiandae magnam, non esse amet perferendis recusandae quam dicta neque exercitationem! Reiciendis explicabo, sequi aliquid sapiente facilis odit fuga illum assumenda exercitationem natus officia obcaecati recusandae nam corrupti adipisci minima repellendus.
+                </div>
+            </div>
+            <div class="grid-item">
+                <div class="block bg white border borer-gray-200 shadow p-5 max-w-md">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae eos facere reprehenderit animi expedita ex in nam tempore architecto necessitatibus!
+                </div>
+            </div>
+            <div class="grid-item">
+                <div class="block bg white border borer-gray-200 shadow p-5 max-w-md">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non soluta nihil accusantium, quae voluptatum officiis vel itaque qui maxime obcaecati? Quidem at placeat provident. Omnis est nobis dolore tempore distinctio.
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
