--- a/views/layouts/main_layout.hbs
+++ b/views/layouts/main_layout.hbs
@@ -22,5 +22,15 @@
             e.name === 'menu' ? (e.name = 'close', list.classList.add('top-[80px]'), list.classList.add('opacity-100')) : (e.name = 'menu', list.classList.remove('top-[80px]'), list.classList.remove('opacity-100'))
         }
     </script>
+
+    <script src="https://unpkg.com/colcade@0/colcade.js"></script>
+
+    <script>
+        // selector string as first argument
+        var colc = new Colcade( '.grid', {
+            columns: '.grid-col',
+            items: '.grid-item'
+        }); 
+    </script>
 </body>
 </html>
