--- a/public/css/input.css
+++ b/public/css/input.css
@@ -1,3 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.grid {
+    display: flex;
+}
+
+.grid-col {
+    flex: 1;
+    padding: 0 .1em;
+}
+
+.grid-col--2, .grid-col--3, .grid-col--4 {
+    display: none;
+}
+
+@media ( min-width: 768px ) {
+    .grid-col { width: 32%; }
+    .grid-col--2 { display: block; }
+}
+
+@media ( min-width: 1200px ) {
+    .grid-col { width: 23.5%; }
+    .grid-col--2, .grid-col--3 { display: block; }
+}
+  
+@media ( min-width: 1440px ) {
+    .grid-col { width: 23.5%; }
+    .grid-col--2, .grid-col--3, .grid-col--4 { display: block; }
+}
