--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,7 +23,7 @@
             Why Share?
         </h1>
 
-        <p class="py-5">
+        <p class="py-5 text-center md:text-left">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis maiores ea, harum rem vero sunt nisi mollitia voluptatibus at provident expedita possimus voluptatem. Accusantium harum aliquid cupiditate nihil culpa aliquam! Delectus tempore, dignissimos voluptatem enim ullam, nisi in temporibus excepturi, voluptatum fugiat magnam! Inventore obcaecati quasi accusamus neque adipisci expedita molestias magni, temporibus reiciendis. Dolorem saepe vero illum repellat blanditiis veritatis dolorum reprehenderit at debitis ratione labore nam amet modi a eum aperiam earum ipsa magni tenetur nisi sapiente, laudantium molestiae ex. Sit ipsum recusandae voluptate necessitatibus. Consectetur, quae dicta. Fuga delectus alias ex sunt architecto voluptas minus expedita tenetur.
         </p>
     </div>
@@ -52,20 +52,17 @@
 {{!-- Looping through testimonies --}}
 <section class="py-10">
     <div class="container mx-auto px-4 md:px-auto">
-        <div class="grid">
+
+        <h1 class="text-center text-3xl font-bold text-violet-800 md:text-left">
+            Testimonies
+        </h1>
+
+        <div class="grid py-10 gap-4 content-center">
             {{!-- Columns --}}
-            <div class="grid-col grid-col--1">
-            
-            </div>
-            <div class="grid-col grid-col--2">
-            
-            </div>
-            <div class="grid-col grid-col--3">
-            
-            </div>
-            <div class="grid-col grid-col--4">
-            
-            </div>
+            <div class="grid-col grid-col--1"></div>
+            <div class="grid-col grid-col--2"></div>
+            <div class="grid-col grid-col--3"></div>
+            <div class="grid-col grid-col--4"></div>
 
             {{!-- Content --}}
             <div class="grid-item">
