Improved Testimony UI

--- a/public/css/input.css
+++ b/public/css/input.css
@@ -6,12 +6,16 @@
     display: flex;
 }
 
+.grid-item {
+    padding: 10px 0;
+}
+
 .grid-col {
     flex: 1;
     padding: 0 .1em;
 }
 
-.grid-col--2, .grid-col--3, .grid-col--4 {
+.grid-col--2, .grid-col--3{
     display: none;
 }
 
@@ -27,8 +31,11 @@
         padding: 0 .5em;
     }
 }
-  
+/*   
 @media ( min-width: 1440px ) {
-    .grid-col { width: 23.5%; }
+    .grid-col { width: 19.5%; }
     .grid-col--2, .grid-col--3, .grid-col--4 { display: block; }
-}
+    grid-col {
+        padding: 0 .5em;
+    }
+} */
