--- a/views/index.hbs
+++ b/views/index.hbs
@@ -41,8 +41,9 @@
                 </div>
                 <input type="text" id="simple-search" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-full focus:border-violet-500 block w-full pl-10 p-2.5" placeholder="Search by keyword..." required>
             </div>
-            <button type="submit" class="py-2 px-6 ml-2 text-sm font-medium text-white bg-violet-800 rounded-full">
+            <button type="submit" class="py-2 px-6 ml-2 text-sm font-medium text-white bg-violet-800 rounded-full flex space-x-2">
                 <ion-icon class="w-5 h-5" name="search-outline"></ion-icon>
+                <span class="hidden sm:block">Search</span>
                 <span class="sr-only">Search</span>
             </button>
         </form>
