--- a/views/index.hbs
+++ b/views/index.hbs
@@ -77,6 +77,19 @@
                             <p class="text-gray-700">
                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, ipsum voluptatem. Ad vel recusandae praesentium. Eum obcaecati magni quaerat perferendis natus sequi similique dolores dolore, molestiae nesciunt voluptatibus quis velit quod distinctio assumenda quasi accusamus adipisci et repellat ipsum voluptatum at labore praesentium fugiat. Exercitationem, ea ut! Dolorum dolor neque, ducimus incidunt voluptatum et eos? Modi perferendis dignissimos reprehenderit officia quas aliquid vero porro recusandae pariatur incidunt consequatur laboriosam, molestias non optio necessitatibus, quis est, ex quia similique repellat at! Iure laborum corporis, sint, neque temporibus at reprehenderit incidunt aspernatur nam repudiandae consectetur ea qui saepe veritatis quaerat unde architecto, quas animi id labore. Earum libero tempore quibusdam enim, quasi laudantium et id tempora dicta nostrum? Similique aperiam et quo voluptate dolore totam, ab illum libero aliquid aliquam. Assumenda voluptates mollitia dolorem distinctio tenetur facilis eum architecto corporis quo, cupiditate pariatur rem odio deserunt perspiciatis esse sint excepturi accusantium tempore officiis. Recusandae ex, commodi odio libero tempora deleniti quae earum corrupti est officiis omnis consequatur facere consectetur mollitia porro ad quidem! Eaque aspernatur beatae enim iure molestiae quam quos nihil ipsum temporibus, commodi assumenda impedit cumque eveniet atque voluptatem doloribus? Ducimus impedit harum nostrum vero esse dolore doloribus consequatur ex?
                             </p>
+                            <div class="flex flex-row space-x-3">
+                                <small>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                </small>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -90,6 +103,16 @@
                             <p class="text-gray-700">
                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, ipsum voluptatem. Ad vel recusandae praesentium. Eum obcaecati magni quaerat perferendis natus sequi similique dolores dolore, molestiae nesciunt voluptatibus quis velit quod distinctio assumenda quasi accusamus adipisci et repellat ipsum voluptatum at labore praesentium fugiat. Exercitationem, ea ut! Dolorum dolor neque, ducimus incidunt voluptatum et eos? Modi perferendis dignissimos reprehenderit officia quas aliquid vero porro recusandae pariatur incidunt consequatur laboriosam, molestias non optio necessitatibus, quis est, ex quia similique repellat at! Iure laborum corporis, sint, neque temporibus at r
                             </p>
+                            <div class="flex flex-row space-x-3">
+                                <small>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                </small>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -103,6 +126,12 @@
                             <p class="text-gray-700">
                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, ipsum voluptatem. Ad vel recusandae praesentium. E
                             </p>
+                            <div class="flex flex-row space-x-3">
+                                <small>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                </small>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -116,6 +145,14 @@
                             <p class="text-gray-700">
                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, ipsum voluptatem. Ad vel recusandae praesentium. Eum obcaecati magni quaerat perferendis natus sequi similique dolores dolore, molestiae nesciunt voluptatibus quis velit quod distinctio assumenda quasi accusamus adipisci et repellat ipsum voluptatum at labore praesentium fugiat. Exer commodi odio libero tempora deleniti quae earum corrupti est officiis omnis consequatur facere consectetur mollitia porro ad quidem! Eaque aspernatur beatae enim iure molestiae quam quos nihil ipsum temporibus, commodi assumenda impedit cumque eveniet atque voluptatem doloribus? Ducimus impedit harum nostrum vero esse dolore doloribus consequatur ex?
                             </p>
+                            <div class="flex flex-row space-x-3">
+                                <small>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                </small>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -129,6 +166,19 @@
                             <p class="text-gray-700">
                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, ipsum voluptatem. Ad vel recusandae praesentium. Eum obcaecati magni quaerat perferendis natus sequi similique dolores dolore, molestiae nesciunt voluptatibus quis velit qudolore totam, ab illum libero aliquid aliquam. Assumenda voluptates mollitia dolorem distinctio tenetur facilis eum architecto corporis quo, cupiditate pariatur rem odio deserunt perspiciatis esse sint excepturi accusantium tempore officiis. Recusandae ex, commodi odio libero tempora deleniti quae earum corrupti est officiis omnis consequatur facere consectetur mollitia porro ad quidem! Eaque aspernatur beatae enim iure molestiae quam quos nihil ipsum temporibus, commodi assumenda impedit cumque eveniet atque voluptatem doloribus? Ducimus impedit harum nostrum vero esse dolore doloribus consequatur ex?
                             </p>
+                            <div class="flex flex-row space-x-3">
+                                <small>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                </small>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -142,6 +192,19 @@
                             <p class="text-gray-700">
                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, ipsum voluptatem. Ad vel recusandae praesentium. Eidem! Eaque aspernatur beatae enim iure molestiae quam quos nihil ipsum temporibus, commodi assumenda impedit cumque eveniet atque voluptatem doloribus? Ducimus impedit harum nostrum vero esse dolore doloribus consequatur ex?
                             </p>
+                            <div class="flex flex-row space-x-3">
+                                <small>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                </small>
+                            </div>
                         </div>
                     </div>
                 </div>
