Added register and login routes, now working on page

--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -14,10 +14,10 @@
         
 
             <li class="mb-3 hover:text-violet-600 hover:underline md:my-0">
-                <a href="#" class="">Login</a>
+                <a href="/login" class="">Login</a>
             </li>
 
-            <a href="#" class="bg-violet-800 text-white rounded px-5 py-2 my-2 hover:bg-violet-600 md:my-0">
+            <a href="/register" class="bg-violet-800 text-white rounded px-5 py-2 my-2 hover:bg-violet-600 md:my-0">
                 Register
             </a>
         </ul>
