--- a/views/register.hbs
+++ b/views/register.hbs
@@ -7,7 +7,11 @@
     <title>Share - Register</title>
 </head>
 <body>
-    <section class="conatiner mx-auto px-4 md:px-auto flex items-center justify-center h-screen">
+    
+    <section class="conatiner mx-auto px-4 md:px-auto flex flex-col items-center justify-center h-screen">
+        <p class="text-orange-700">
+            {{ message.message }}
+        </p>
         <div class="border border-gray-200 shadow-md p-5 rounded flex flex-col space-y-7 md:w-2/4 lg:w-2/6 xl:max-w-lg">
             <div class="text-3xl text-violet-800 font-bold text-center underline">
                 Join the family
