--- a/views/register.hbs
+++ b/views/register.hbs
@@ -10,9 +10,15 @@
     
     <section class="conatiner mx-auto px-4 md:px-auto flex flex-col items-center justify-center h-screen">
         {{#if message.error_message}}
-            <p class="text-orange-700">
-                {{ message.error_message }}
-            </p>
+            <div class="flex space-x-2 px-4 py-2 mb-4 text-sm text-red-700 bg-red-100 rounded-lg items-center justify-center" role="alert">
+                <div class="text-lg pt-1">
+                        <ion-icon name="information-circle-outline"></ion-icon>
+                </div>
+                <span class="sr-only">Info</span>
+                <div>
+                    <span class="font-medium">{{ message.error_message }}</span> 
+                </div>
+            </div>
         {{/if}}
         <div class="border border-gray-200 shadow-md p-5 rounded flex flex-col space-y-7 md:w-2/4 lg:w-2/6 xl:max-w-lg">
             <div class="text-3xl text-violet-800 font-bold text-center underline">
