--- a/public/css/output.css
+++ b/public/css/output.css
@@ -754,6 +754,22 @@ select {
   top: -400px;
 }
 
+.top-\[76\] {
+  top: 76;
+}
+
+.top-\[78\] {
+  top: 78;
+}
+
+.z-\[-1\] {
+  z-index: -1;
+}
+
+.z-\[2\] {
+  z-index: 2;
+}
+
 .float-right {
   float: right;
 }
@@ -1061,6 +1077,11 @@ select {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .pl-3 {
