Changed, dashboard to testimonies

--- a/views/auth/testimonies.hbs
+++ b/views/auth/testimonies.hbs
@@ -1,4 +1,4 @@
-<h1>Dashboard</h1>
+<h1>Testimonies</h1>
 
 <form action="/logout?_method=DELETE" method="POST">
     <button type="submit">Logout</button>
