--- a/views/auth/testimonies.hbs
+++ b/views/auth/testimonies.hbs
@@ -1,5 +1,184 @@
-<h1>Testimonies</h1>
+{{!-- Search bar --}}
+<section class="py-10">
+    <div class="container mx-auto px-4 md:px-auto flex justify-center items-center">
+        <form class="flex items-center w-full md:w-3/5">   
+            <label for="simple-search" class="sr-only">Search</label>
+            <div class="relative w-full">
+                <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
+                    <ion-icon class="w-5 h-5 text-gray-500" name="search-outline"></ion-icon>
+                    
+                </div>
+                <input type="text" id="simple-search" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-full focus:border-violet-500 block w-full pl-10 p-2.5" placeholder="Search by keyword..." required>
+            </div>
+            <button type="submit" class="py-2 px-6 ml-2 text-sm font-medium text-white bg-violet-800 rounded-full flex space-x-2">
+                <ion-icon class="w-5 h-5" name="search-outline"></ion-icon>
+                <span class="hidden sm:block">Search</span>
+                <span class="sr-only">Search</span>
+            </button>
+        </form>
+    </div>
+</section>
 
-<form action="/logout?_method=DELETE" method="POST">
-    <button type="submit">Logout</button>
-</form>
+
+{{!-- Looping through testimonies --}}
+<section class="py-10">
+    <div class="container mx-auto px-4 md:px-auto">
+
+        <h1 class="text-center text-3xl font-bold text-violet-800 md:text-left">
+            Testimonies
+        </h1>
+
+        <div class="flex items-center justify-center">
+            <div class="grid py-10 gap-4 content-center">
+                {{!-- Columns --}}
+                <div class="grid-col grid-col--1"></div>
+                <div class="grid-col grid-col--2"></div>
+                <div class="grid-col grid-col--3"></div>
+                {{!-- <div class="grid-col grid-col--4"></div> --}}
+
+                {{!-- Content --}}
+                <div class="grid-item">
+                    <div class="block bg white border borer-gray-200 shadow p-5 max-w-md">
+                        <div class="flex flex-col space-y-5">
+                            <div class="flex flex-col">
+                                <p class="text-xl"><strong>Jason Kwame Appiatu</strong></p>
+                                <small class="text-gray-500">19th November, 2022</small>
+                            </div>
+                            <p class="text-gray-700">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, ipsum voluptatem. Ad vel recusandae praesentium. Eum obcaecati magni quaerat perferendis natus sequi similique dolores dolore, molestiae nesciunt voluptatibus quis velit quod distinctio assumenda quasi accusamus adipisci et repellat ipsum voluptatum at labore praesentium fugiat. Exercitationem, ea ut! Dolorum dolor neque, ducimus incidunt voluptatum et eos? Modi perferendis dignissimos reprehenderit officia quas aliquid vero porro recusandae pariatur incidunt consequatur laboriosam, molestias non optio necessitatibus, quis est, ex quia similique repellat at! Iure laborum corporis, sint, neque temporibus at reprehenderit incidunt aspernatur nam repudiandae consectetur ea qui saepe veritatis quaerat unde architecto, quas animi id labore. Earum libero tempore quibusdam enim, quasi laudantium et id tempora dicta nostrum? Similique aperiam et quo voluptate dolore totam, ab illum libero aliquid aliquam. Assumenda voluptates mollitia dolorem distinctio tenetur facilis eum architecto corporis quo, cupiditate pariatur rem odio deserunt perspiciatis esse sint excepturi accusantium tempore officiis. Recusandae ex, commodi odio libero tempora deleniti quae earum corrupti est officiis omnis consequatur facere consectetur mollitia porro ad quidem! Eaque aspernatur beatae enim iure molestiae quam quos nihil ipsum temporibus, commodi assumenda impedit cumque eveniet atque voluptatem doloribus? Ducimus impedit harum nostrum vero esse dolore doloribus consequatur ex?
+                            </p>
+                            <div class="flex flex-row space-x-3">
+                                <small>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                </small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <div class="block bg white border borer-gray-200 shadow p-5 max-w-md">
+                        <div class="flex flex-col space-y-5">
+                            <div class="flex flex-col">
+                                <p class="text-xl"><strong>Jason Kwame Appiatu</strong></p>
+                                <small class="text-gray-500">19th November, 2022</small>
+                            </div>
+                            <p class="text-gray-700">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, ipsum voluptatem. Ad vel recusandae praesentium. Eum obcaecati magni quaerat perferendis natus sequi similique dolores dolore, molestiae nesciunt voluptatibus quis velit quod distinctio assumenda quasi accusamus adipisci et repellat ipsum voluptatum at labore praesentium fugiat. Exercitationem, ea ut! Dolorum dolor neque, ducimus incidunt voluptatum et eos? Modi perferendis dignissimos reprehenderit officia quas aliquid vero porro recusandae pariatur incidunt consequatur laboriosam, molestias non optio necessitatibus, quis est, ex quia similique repellat at! Iure laborum corporis, sint, neque temporibus at r
+                            </p>
+                            <div class="flex flex-row space-x-3">
+                                <small>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                </small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <div class="block bg white border borer-gray-200 shadow p-5 max-w-md">
+                        <div class="flex flex-col space-y-5">
+                            <div class="flex flex-col">
+                                <p class="text-xl"><strong>Jason Kwame Appiatu</strong></p>
+                                <small class="text-gray-500">19th November, 2022</small>
+                            </div>
+                            <p class="text-gray-700">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, ipsum voluptatem. Ad vel recusandae praesentium. E
+                            </p>
+                            <div class="flex flex-row space-x-3">
+                                <small>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                </small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <div class="block bg white border borer-gray-200 shadow p-5 max-w-md">
+                        <div class="flex flex-col space-y-5">
+                            <div class="flex flex-col">
+                                <p class="text-xl"><strong>Jason Kwame Appiatu</strong></p>
+                                <small class="text-gray-500">19th November, 2022</small>
+                            </div>
+                            <p class="text-gray-700">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, ipsum voluptatem. Ad vel recusandae praesentium. Eum obcaecati magni quaerat perferendis natus sequi similique dolores dolore, molestiae nesciunt voluptatibus quis velit quod distinctio assumenda quasi accusamus adipisci et repellat ipsum voluptatum at labore praesentium fugiat. Exer commodi odio libero tempora deleniti quae earum corrupti est officiis omnis consequatur facere consectetur mollitia porro ad quidem! Eaque aspernatur beatae enim iure molestiae quam quos nihil ipsum temporibus, commodi assumenda impedit cumque eveniet atque voluptatem doloribus? Ducimus impedit harum nostrum vero esse dolore doloribus consequatur ex?
+                            </p>
+                            <div class="flex flex-row space-x-3">
+                                <small>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                </small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <div class="block bg white border borer-gray-200 shadow p-5 max-w-md">
+                        <div class="flex flex-col space-y-5">
+                            <div class="flex flex-col">
+                                <p class="text-xl"><strong>Jason Kwame Appiatu</strong></p>
+                                <small class="text-gray-500">19th November, 2022</small>
+                            </div>
+                            <p class="text-gray-700">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, ipsum voluptatem. Ad vel recusandae praesentium. Eum obcaecati magni quaerat perferendis natus sequi similique dolores dolore, molestiae nesciunt voluptatibus quis velit qudolore totam, ab illum libero aliquid aliquam. Assumenda voluptates mollitia dolorem distinctio tenetur facilis eum architecto corporis quo, cupiditate pariatur rem odio deserunt perspiciatis esse sint excepturi accusantium tempore officiis. Recusandae ex, commodi odio libero tempora deleniti quae earum corrupti est officiis omnis consequatur facere consectetur mollitia porro ad quidem! Eaque aspernatur beatae enim iure molestiae quam quos nihil ipsum temporibus, commodi assumenda impedit cumque eveniet atque voluptatem doloribus? Ducimus impedit harum nostrum vero esse dolore doloribus consequatur ex?
+                            </p>
+                            <div class="flex flex-row space-x-3">
+                                <small>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                </small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <div class="block bg white border borer-gray-200 shadow p-5 max-w-md">
+                        <div class="flex flex-col space-y-5">
+                            <div class="flex flex-col">
+                                <p class="text-xl"><strong>Jason Kwame Appiatu</strong></p>
+                                <small class="text-gray-500">19th November, 2022</small>
+                            </div>
+                            <p class="text-gray-700">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, ipsum voluptatem. Ad vel recusandae praesentium. Eidem! Eaque aspernatur beatae enim iure molestiae quam quos nihil ipsum temporibus, commodi assumenda impedit cumque eveniet atque voluptatem doloribus? Ducimus impedit harum nostrum vero esse dolore doloribus consequatur ex?
+                            </p>
+                            <div class="flex flex-row space-x-3">
+                                <small>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Healing</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Provision</button>
+                                    <button class="border border-gray-200 bg-gray-100 px-3 my-1 rounded-full text-gray-500">Speed</button>
+                                </small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
