--- a/views/partials/_auth_header.hbs
+++ b/views/partials/_auth_header.hbs
@@ -13,11 +13,11 @@
         <ul id="nav-menu" class="z-2 absolute bg-white w-full left-0 py-5 pl-7 opacity-0 md:py-0 top-[-400px] transition-all ease-in duration-500 md:pl-0 md:static md:z-auto md:flex md:items-center md:space-x-5 md:w-auto md:opacity-100">
         
 
-            <li class="mb-3 hover:text-violet-600 hover:underline md:my-0">
-                <a href="/testimonies" class="">Testimonies</a>
+            <li class="mb-3 {{#if page.testimonies}} text-violet-600 {{else}} hover:text-violet-600 {{/if}} hover:underline md:my-0">
+                <a href="/testimonies">Testimonies</a>
             </li>
             
-            <li class="mb-3 hover:text-violet-600 hover:underline md:my-0">
+            <li class="mb-3 {{#if page.profile}} text-violet-600 {{else}} hover:text-violet-600 {{/if}} hover:underline md:my-0">
                 <a href="/profile" class="">Profile</a>
             </li>
 
