--- a/views/partials/_auth_header.hbs
+++ b/views/partials/_auth_header.hbs
@@ -12,7 +12,7 @@
             </span>
         </div>
 
-        <ul id="nav-menu" class="z-40 absolute bg-white w-full left-0 py-5 pl-7 opacity-0 md:z-auto md:py-0 top-[-400px] transition-all ease-in duration-500 md:pl-0 md:static md:z-auto md:flex md:items-center md:space-x-5 md:w-auto md:opacity-100">
+        <ul id="nav-menu" class="z-40 absolute bg-white w-full left-0 py-5 pl-7 opacity-0 md:py-0 top-[-400px] transition-all ease-in duration-500 md:pl-0 md:static md:z-auto md:flex md:items-center md:space-x-5 md:w-auto md:opacity-100">
         
 
             <li class="mb-3 {{#if page.testimonies}} text-violet-600 {{else}} hover:text-violet-600 {{/if}} hover:underline md:my-0">
