Name and email displayed

--- a/public/css/output.css
+++ b/public/css/output.css
@@ -1414,6 +1414,12 @@ select {
     margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .md\:space-x-10 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(2.5rem * var(--tw-space-x-reverse));
+    margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
   .md\:py-0 {
     padding-top: 0px;
     padding-bottom: 0px;
