--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -1,1 +1,20 @@
-<h1>Profile</h1>
+{{!-- profile --}}
+<section class="py-10">
+    <div class="container mx-auto px-4 md:px-auto">
+        <h1 class="text-2xl text-violet-800 font-bold">
+            Profile
+        </h1>
+
+        <div class="flex flex-col py-3 md:flex-row
+         md:space-x-10">
+            <div class="flex space-x-2">
+                <h1 class="font-bold">Name:</h1>
+                <p>{{user_name}}</p>
+            </div>
+            <div class="flex space-x-2">
+                <h1 class="font-bold">Email:</h1>
+                <p>{{user_email}}</p>
+            </div>
+        </div>
+    </div>
+</section>
