--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -15,6 +15,22 @@
                 <h1 class="font-bold">Email:</h1>
                 <p>{{user_email}}</p>
             </div>
+            <div>
+                <a href="#" class="text-xl text-white bg-gradient-to-r from-violet-800 to-violet-500 px-3 py-1 rounded flex items-center justify-center">
+                    <ion-icon name="pencil"></ion-icon>
+                </a>
+            </div>
         </div>
+    </div>
+</section>
+
+{{!-- My testimonies --}}
+<section class="py-10">
+    <div class="container mx-auto px-4 md:px-auto">
+        <h1 class="text-2xl text-violet-800 font-bold">
+            My testimonies
+        </h1>
+
+        
     </div>
 </section>
