Created 404 and 500 pages

--- a/public/css/output.css
+++ b/public/css/output.css
@@ -1175,6 +1175,16 @@ select {
   line-height: 2rem;
 }
 
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-9xl {
+  font-size: 8rem;
+  line-height: 1;
+}
+
 .font-bold {
   font-weight: 700;
 }
