--- a/views/index.hbs
+++ b/views/index.hbs
@@ -58,7 +58,7 @@
             Testimonies
         </h1>
 
-        <div class="flex items-center justify-center">
+        <div class="flex items-center justify-center md:justify-start">
             <div class="grid py-10 gap-4 content-center">
                 {{!-- Columns --}}
                 <div class="grid-col grid-col--1"></div>
