--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -1,11 +1,11 @@
 {{!-- profile --}}
 <section class="py-10">
-    <div class="container mx-auto px-4 md:px-auto">
+    <div class="container text-center mx-auto px-4 md:px-auto md:text-start">
         <h1 class="text-2xl text-violet-800 font-bold">
             Profile
         </h1>
 
-        <div class="flex flex-col py-3 md:flex-row
+        <div class="flex flex-col py-3 items-center justify-center md:justify-start md:flex-row
          md:space-x-10">
             <div class="flex space-x-2">
                 <h1 class="font-bold">Name:</h1>
@@ -72,11 +72,6 @@
 
 
 
-
-
-
-
-
 {{!-- My testimonies --}}
 <section class="py-10">
     <div class="container mx-auto px-4 md:px-auto">
@@ -84,17 +79,19 @@
             My testimonies
         </h1>
 
-        <a href="#"></a>
+        <button class="px-3 py-1 my-3 rounded text-white bg-gradient-to-r from-violet-800 to-violet-600">
+            Add a testimony
+        </button>
         
     </div>
 </section>
 
 
 {{!-- My testimonies list --}}
-<section class="py-10">
+<section class="pb-10">
     <div class="container mx-auto px-4 md:px-auto">
 
-        <div class="flex items-center justify-center">
+        <div class="flex items-center justify-center md:justify-start">
             <div class="grid py-10 gap-4 content-center">
                 {{!-- Columns --}}
                 <div class="grid-col grid-col--1"></div>
